--- a/registration.html
+++ b/registration.html
@@ -7,3 +7,4 @@ name="Login" id="Login"/></br>
 name="Password" id="Password"/></br>
       <input type="submit" 
 name="Submit1" value="Submit1" />
+</form>
